@@ -1,3 +1,8 @@
+Tue Dec 18 20:49:50 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/mpwrap.c, src/calc.c: make a minor optimization, and remove an
+	  unsafe unnecessary one
+
 Mon Dec 17 15:15:44 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: bit of post release cleanup
